--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,1 @@
-POSTGRES_PASSWORD=123
-POSTGRES_USER=test
-POSTGRES_DB=decoupled_dj
-DB_HOST=db
-DB_PORT=5432
+DJANGO_SETTINGS_MODULE=decoupled_dj.settings.development
